Masonry for mobile and alignment issues

--- a/app/assets/styles/_global.scss
+++ b/app/assets/styles/_global.scss
@@ -44,5 +44,6 @@ h1, h2, h3, h4{
 .wrapper__page{
     clear: both;
     margin: 0 auto;
-    max-width: 1000px;
+    max-width: 95%;
+    width: $wrapper;
 }
