--- a/app/components/countries/_countries.scss
+++ b/app/components/countries/_countries.scss
@@ -10,18 +10,19 @@
 		font-size: 14px;
 		font-weight: bold;
 		flex-wrap: wrap;
+		justify-content: space-between;
 		@include respond-to($medium) {
 			font-size: 20px;
 		}
 	}
 	&__country{
-		padding: 10px;
-		width: calc(100% / 2);
+		margin: 10px 0;
+		width: calc( (100% / 2) - 10px );
 		@include respond-to($phone-landscape) {
-			width: calc(100% / 3);
+			width: calc( (100% / 3) - 10px );
 		}
 		@include respond-to($medium) {
-			width: calc(100% / 4);
+			width: calc( (100% / 4) - 10px );
     	}
 		a{
 			color: white;
