--- a/app/components/footer/_footer.scss
+++ b/app/components/footer/_footer.scss
@@ -7,14 +7,15 @@
 		display: flex;
 		flex-wrap: wrap;
 		margin: 0 auto;
-		padding: 10px;
-		max-width: 1000px;
+		padding: $margin 0;
+		max-width: 95%;
+		width: $wrapper;
 		> *{
 			width: 100%;
 		}
 		@include respond-to($large) {
 			justify-content: space-between;
-			padding: 10px 0px;
+			padding: $margin 0px;
 			> *{
 				width: calc(100% / 3);
 			}
