--- a/app/components/menu/_menu.scss
+++ b/app/components/menu/_menu.scss
@@ -11,7 +11,8 @@ $menu-height: 57px;
 	&__wrapper{
 		margin: 0 auto;
 		padding: 10px;
-		max-width: 1000px;
+		max-width: 95%;
+		width: $wrapper;
 		@include respond-to($large) {
 			display: flex;
 			justify-content: space-between;
